[gd_scene load_steps=2 format=3 uid="uid://to3pjx7oemdk"]

[ext_resource type="Script" path="res://Resources/Screens/BuildingSelectionScreen/BuildingOption/building_option.gd" id="1_m8d0i"]

[node name="BuildingOption" type="PanelContainer"]
custom_minimum_size = Vector2(64, 64)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_m8d0i")

[node name="Button" type="Button" parent="."]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_filter = 2
expand_mode = 3
stretch_mode = 5

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
